v5.8
-----
+ The "Remove" links on the wishlist no longer require the page to reload