@@ -1425,11 +1425,18 @@ function add_market_total() {
         if (window.location.pathname.match(/^\/market\/$/)) {
         	$("#moreInfo").before('<div id="es_summary"><div class="market_search_sidebar_contents"><h2 class="market_section_title">'+ escapeHTML(localized_strings[language].market_transactions) +'</h2><div class="market_search_game_button_group" id="es_market_summary" style="width: 238px"><img src="http://cdn.steamcommunity.com/public/images/login/throbber.gif">' + escapeHTML(localized_strings[language].loading) + '</div></div></div>');
         	
-        	// Get market transactions
-        	get_http("http://steamcommunity.com/market/myhistory/render/?query=&start=0&count=999", function (txt) {
+        	var pur_total = 0.0;
+			var usd_total = 0.0;
+			var gbp_total = 0.0;
+			var eur_total = 0.0;
+			var rub_total = 0.0;
+			var brl_total = 0.0;
+			var currency_symbol = "";
+
+        	function get_market_data(txt) {
         		var data = JSON.parse(txt);
         		market = data['results_html'];		
-        		var currency_symbol = "";
+        		var total_count = data["total_count"];
         		
         		totaler = function (p, i) {			
         			var priceContainer = $(p).find(".market_listing_price");
@@ -1563,110 +1570,125 @@ function add_market_total() {
         		eur_prices = jQuery.map($(market), eur_totaler);
         		rub_prices = jQuery.map($(market), rub_totaler);
         		brl_prices = jQuery.map($(market), brl_totaler);
-        		
-        		var pur_total = 0.0;
-        		var usd_total = 0.0;
-        		var gbp_total = 0.0;
-        		var eur_total = 0.0;
-        		var rub_total = 0.0;
-        		var brl_total = 0.0;		
-        		
+        		        		
         		jQuery.map(pur_prices, function (p, i) { pur_total += p; });
         		jQuery.map(usd_prices, function (p, i) { usd_total += p; });
         		jQuery.map(gbp_prices, function (p, i) { gbp_total += p; });
         		jQuery.map(eur_prices, function (p, i) { eur_total += p; });
         		jQuery.map(rub_prices, function (p, i) { rub_total += p; });
         		jQuery.map(brl_prices, function (p, i) { brl_total += p; });
+        	}
         		
-        		if (data['total_count'] < 1000) {
-					switch (currency_symbol) {
-						case "€":
-							get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=eur", function (txt) {
-								txt = escapeHTML(txt);
-								var net = txt - pur_total;
-								
-								var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ".", ",", true) + "</span><br>";
-								html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ".", ",", true) + "</span><br>";
-								if (net > 0) {
-									html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
-								} else {
-									html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
-								}
-								
-								$("#es_market_summary").html(html);
-							});
-							break;
-
-						case "pуб":
-							get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=rub", function (txt) {
-								txt = escapeHTML(txt);
-								var net = txt - pur_total;
-								
-								var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ".", ",", true) + "</span><br>";
-								html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ".", ",", true) + "</span><br>";
-								if (net > 0) {
-									html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
-								} else {
-									html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
-								}
-								
-								$("#es_market_summary").html(html);
-							});
-							break;
-
-						case "£":
-							get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=gbp", function (txt) {
-								txt = escapeHTML(txt);
-								var net = txt - pur_total;
-								
-								var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								if (net > 0) {
-									html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								} else {
-									html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								}
-								
-								$("#es_market_summary").html(html);
-							});
-							break;
-
-						case "R$":
-							get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=brl", function (txt) {
-								txt = escapeHTML(txt);
-								var net = txt - pur_total;
-								
-								var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								if (net > 0) {
-									html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								} else {
-									html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								}
-								
-								$("#es_market_summary").html(html);
-							});
-							break;
+        	function show_results() {
+				switch (currency_symbol) {
+					case "€":
+						get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=eur", function (txt) {
+							txt = escapeHTML(txt);
+							var net = txt - pur_total;
 							
-						default:
-							get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=usd", function (txt) {
-								txt = escapeHTML(txt);
-								var net = txt - pur_total;
-								
-								var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
-								if (net > 0) {
-									html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								} else {
-									html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
-								}
-								
-								$("#es_market_summary").html(html);
-							});
-							break;
+							var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ".", ",", true) + "</span><br>";
+							html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ".", ",", true) + "</span><br>";
+							if (net > 0) {
+								html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
+							} else {
+								html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
+							}
+							
+							$("#es_market_summary").html(html);
+						});
+						break;
+
+					case "pуб":
+						get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=rub", function (txt) {
+							txt = escapeHTML(txt);
+							var net = txt - pur_total;
+							
+							var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ".", ",", true) + "</span><br>";
+							html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ".", ",", true) + "</span><br>";
+							if (net > 0) {
+								html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
+							} else {
+								html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ".", ",", true) + "</span>";
+							}
+							
+							$("#es_market_summary").html(html);
+						});
+						break;
+
+					case "£":
+						get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=gbp", function (txt) {
+							txt = escapeHTML(txt);
+							var net = txt - pur_total;
+							
+							var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							if (net > 0) {
+								html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							} else {
+								html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							}
+							
+							$("#es_market_summary").html(html);
+						});
+						break;
+
+					case "R$":
+						get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=brl", function (txt) {
+							txt = escapeHTML(txt);
+							var net = txt - pur_total;
+							
+							var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							if (net > 0) {
+								html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							} else {
+								html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							}
+							
+							$("#es_market_summary").html(html);
+						});
+						break;
+						
+					default:
+						get_http("http://api.enhancedsteam.com/currency/?usd=" + usd_total + "&gbp=" + gbp_total + "&eur=" + eur_total + "&rub=" + rub_total + "$brl=" + brl_total + "&local=usd", function (txt) {
+							txt = escapeHTML(txt);
+							var net = txt - pur_total;
+							
+							var html = escapeHTML(localized_strings[language].purchase_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(pur_total), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							html += escapeHTML(localized_strings[language].sales_total) + ":<span style='float: right;'>" + formatMoney(parseFloat(txt), 2, currency_symbol, ",", ".", false) + "</span><br>";
+							if (net > 0) {
+								html += escapeHTML(localized_strings[language].net_gain) + ":<span style='float: right; color: green;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							} else {
+								html += escapeHTML(localized_strings[language].net_spent) + ":<span style='float: right; color: red;'>" + formatMoney(parseFloat(net), 2, currency_symbol, ",", ".", false) + "</span>";
+							}
+							
+							$("#es_market_summary").html(html);
+						});
+						break;
+				}
+			}
+			
+			var start = 0;
+			var count = 1000;
+			var i = 1;
+			get_http("http://steamcommunity.com/market/myhistory/render/?query=&start=0&count=1", function (last_transaction) {
+				var data = JSON.parse(last_transaction);
+				var total_count = data["total_count"];
+				var loops = Math.ceil(total_count / count);
+
+				if (loops) {
+					while ((start + count) < (total_count + count)) {
+						get_http("http://steamcommunity.com/market/myhistory/render/?query=&start=" + start + "&count=" + count, function (txt) {
+							get_market_data(txt);
+							if (i == loops) { show_results(); }
+							i++;
+						});
+						start += count;
 					}
-					}
-    	    });
+				} else {
+					show_results();
+				}
+			});
         }
     }
 }
